--- a/css/style.css
+++ b/css/style.css
@@ -846,7 +846,7 @@ input[type="checkbox"] {
     height: calc(100% - 63px);
     bottom: 0;
     left: 0;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     background: #2e363e;
     padding-top: 0;
     display: flex;
@@ -874,6 +874,8 @@ input[type="checkbox"] {
     line-height: 1em;
     font-weight: 300;
     text-transform: capitalize;
+    height: 46px;
+    position: relative;
 }
 .main-sidenav ul li:first-child a {
     border-top: none;
@@ -906,7 +908,7 @@ input[type="checkbox"] {
 }
 .zone {
     width: 100%;
-    height: 500px;
+    height: 485px;
     position: relative;
     text-align: center;
     color: grey;
@@ -936,7 +938,6 @@ input[type="checkbox"] {
 
 .zone .selectFile label {
     position: relative;
-    background: #249bc0;
     color: #fff;
     display: inline-block;
     font-size: 1.2em;
@@ -951,6 +952,18 @@ input[type="checkbox"] {
     cursor: pointer;
     z-index: 1;
     overflow: hidden;
+    background: #f2f2f2;
+    background: -moz-linear-gradient(top, #ffffff 0%, #f2f2f2 100%);
+    background: -webkit-linear-gradient(top, #ffffff 0%,#f2f2f2 100%);
+    background: linear-gradient(to bottom, #ffffff 0%,#f2f2f2 100%);
+    border: 1px solid #d4d4d4;
+    color: #6d6d6d;
+    font-weight: 700;
+    transition: all ease-in-out 250ms;
+}
+.zone .selectFile label:hover {
+    color: #ffffff;
+    border-color: #1684a7;
 }
 .zone .selectFile label:before {
     position: absolute;
@@ -1046,13 +1059,16 @@ input[type="checkbox"] {
 .global-table.results-table table {
     margin: 0 !important;
     border: none;
-    margin-top: -2px;
+    display: inline-table;
 }
 .global-table.results-table table thead {
     background: #e03e38;
 }
-.global-table.results-table .table-striped tbody tr {
-    background-color: #f1f1f1;
+.global-table.results-table .table-striped tbody tr td {
+    border-top: 1px solid #dadada;
+}
+.global-table.results-table .table-striped tbody tr:hover {
+    background-color: #f5f5f5;
 }
 .global-table .container-fluid {
     padding-left: 0;
@@ -1257,9 +1273,9 @@ table.dataTable thead th {
     padding: 10px 11px;
 }
 /* .global-table .table-striped tbody tr:nth-child(even), */
-.global-table .table-striped tbody tr:hover {
+/* .global-table .table-striped tbody tr:hover {
     background-color: #f1f1f1;
-}
+} */
 .select_all_tbl {
     /* width: 90px; */
     background-image: none !important;
@@ -1298,7 +1314,7 @@ table.dataTable thead th {
     background-color: #6c757d !important;
     border-color: #6c757d !important;
 }
-.accordion a {
+/* .accordion a {
     color: #6b757c;
     padding: .75rem 1.25rem;
     display: block;
@@ -1339,7 +1355,7 @@ table.dataTable thead th {
 }
 .accordion h5.mb-0 {
     font-size: 16px;
-}
+} */
 span.rank {
     display: inline-block;
     width: 20px;
@@ -1350,15 +1366,24 @@ span.rank {
     color: white;
     line-height: 20px;
 }
-.time_series_tbl,
 .rank_tbl {
     position: relative;
-    padding-left: 30px;
+    /* padding-left: 30px; */
 }
-.time_series_tbl {
-    padding-bottom: 23px;
+.table_connected_header {
+    background: #eaeaea;
+    display: inline-block;
+    width: 100%;
+    border: 1px solid #dddddd;
+    border-bottom: none;
+    padding: 15px 20px;
 }
-.time_series_tbl:before {
+.table_connected_header h5 {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
+/* .time_series_tbl:before {
     position: absolute;
     display: block;
     content: "";
@@ -1400,7 +1425,7 @@ span.rank {
     top: -51px;
     background-color: #ffffff;
     left: 6px;
-}
+} */
 /* .rank_tbl:after {
     position: absolute;
     display: block;
@@ -1631,7 +1656,8 @@ span.rank {
     -moz-animation: color_change 1s infinite alternate;
     -o-animation: color_change 1s infinite alternate;
 }
-.onboarding_steps ul li.active a::after {
+
+.onboarding_steps ul li.active_step a::after {
     background-color: rgba(255, 255, 255, 0);
     -webkit-box-shadow: 0px 0px 1px 1px rgba(251, 189, 24, 0.8);
     -moz-box-shadow: 0px 0px 1px 1px rgba(251, 189, 24, 0.8);
@@ -1713,6 +1739,151 @@ span.rank {
 }
 
 
+
+.table_connected_body {
+    background-color: #f8fdff;
+    padding: 10px 20px 20px 20px;
+    border: 1px solid #dddddd;
+}
+.table_connected_body .tab-content>.tab-pane.fade.in.active {
+    opacity: 1;
+}
+.table_connected_body .nav-link {
+    text-transform: uppercase;
+    border: none;
+    border-bottom: 3px solid transparent;
+    font-weight: 700;
+    color: #8c8b8b;
+    font-size: 15px;
+    padding: .5em .77em;
+}
+.table_connected_body .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    background: transparent;
+    border: none;
+    border-bottom: 3px solid #e03e38;
+}
+.table_connected_body .nav-tabs {
+    margin-bottom: 20px;
+}
+.table_connected_wrapper {
+    position: relative;
+    padding-left: 35px;
+}
+
+.table_connected_wrapper:before {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 7px;
+    height: 102%;
+    top: 30px;
+    background-color: #d4d1d1;
+    left: 6px;
+}
+.table_connected_wrapper:after {
+    position: absolute;
+    display: block;
+    content: "";
+    width: 22px;
+    height: 22px;
+    top: 15px;
+    background-color: #f8f8f8;
+    border: 5px solid #d4d1d1;
+    left: -1px;
+    border-radius: 100px;
+}
+/* hide sidebar */
+.bottom_nav {
+    margin-top: auto;
+}
+.bottom_nav a.hide_navigation {
+    position: relative;
+    display: block;
+    color: white;
+    background: #0e1013;
+    line-height: 1em;
+    padding: 13px 20px;
+    height: 40px;
+    text-decoration: none !important;
+}
+.bottom_nav a.hide_navigation:hover {
+    opacity: 0.7;
+    color: #ffffff;
+}
+.hide_sidebar_wrapper .main-sidenav ul li a span.text_nav {
+    display: none;
+}
+.main-sidenav ul li a span.fa-nav {
+    display: none;
+}
+.hide_sidebar_wrapper .main-sidenav ul li a span.fa-nav {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    line-height: 45px;
+}
+.hide_sidebar_wrapper .sidebar-content {
+    width: 64px;
+}
+.hide_sidebar_wrapper .main_container {
+    margin-left: 64px; 
+}
+.hide_sidebar_wrapper .main-sidenav ul li a {
+    text-align: center;
+}
+.hide_sidebar_wrapper .main-sidenav ul li a .fa {
+    font-size: 17px;
+    position: relative;
+    width: auto;
+}
+.bottom_nav a.hide_navigation .fa {
+    position: absolute;
+    right: 0;
+    width: 40px;
+    height: 100%;
+    background: #0e0e13;
+    display: block;
+    top: 0;
+    text-align: center;
+    line-height: 40px;
+    font-size: 19px;
+    border-left: 1px solid #373f48;
+}
+.hide_sidebar_wrapper .bottom_nav a.hide_navigation .fa  {
+    width: 100%;
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
+    line-height: 41px;
+    font-size: 20px;
+}
+
+.cta_action_innerWrapper {
+    overflow: hidden;
+    margin-top: 19px;
+    border-bottom: 1px solid #e0dfdf;
+    padding-bottom: 20px;
+}
+.cta_action_innerWrapper a.btn-link {
+    text-transform: uppercase;
+    font-size: 17px;
+    text-decoration: underline;
+    display: inline-block;
+    margin-top: 15px;
+    float: left;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+}
+.cta_action_innerWrapper .btn.btn-big {
+    padding: 1em 1.7em;
+}
+/* landing page */
 header.landing_page_header {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -1755,8 +1926,6 @@ header .landing_page_header_container .shadow {
     -ms-transform: skewX(20deg);
     -webkit-transform: skewX(20deg);
     transform: skewX(-38deg);
-    /* pointer-events: none; */
-    /* pointer-events: none; */
 }
 header .landing_page_header_container .shadow:after {
     position: absolute;
@@ -1908,3 +2077,8 @@ header .landing_page_header_container .shadow:after {
 .show_process_wrapper {
     margin-top: 70px;
 }
+
+
+
+
+
