--- a/css/style.css
+++ b/css/style.css
@@ -1097,6 +1097,9 @@ span#selected_file {
     vertical-align: middle;
     font-size: 14px;
 }
+.global-table .table td {
+    padding: 0.60rem .75rem;
+}
 .global-table .table span.ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
