--- a/css/style.css
+++ b/css/style.css
@@ -1383,12 +1383,22 @@ span.rank {
     /* padding-left: 30px; */
 }
 .table_connected_header {
-    background: #eaeaea;
+    background-color: #eaeaea;
     display: inline-block;
     width: 100%;
     border: 1px solid #dddddd;
     border-bottom: none;
     padding: 15px 20px;
+    cursor: pointer;
+    transition: all ease-in-out 200ms;
+    position: relative;
+    background-image: url(../images/arrow_down.svg);
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center right 20px;
+}
+.table_connected_header:hover {
+    background-color: #dcd9d9;
 }
 .table_connected_header h5 {
     margin: 0;
@@ -1756,8 +1766,11 @@ span.rank {
     background-color: #f8fdff;
     padding: 10px 20px 20px 20px;
     border: 1px solid #dddddd;
-    /* display: none; */
+    display: none;
 }
+/* .table_result_wrapper .table_connected_wrapper:first-child .table_connected_body {
+    display: block;
+} */
 .table_connected_body .tab-content>.tab-pane.fade.in.active {
     opacity: 1;
 }
@@ -1795,18 +1808,22 @@ span.rank {
     margin-top: 10px;
     border-bottom: 1px solid #e2dddd;
 }
-.table_connected_wrapper {
+.table_result_wrapper .table_connected_wrapper {
     position: relative;
     padding-left: 35px;
+    /* margin-bottom: 25px; */
 }
-.table_result_wrapper .table_connected_wrapper {
-    margin-bottom: 25px;
+.table_result_wrapper .table_connected_wrapper:first-child .table_connected_body {
+    /* display: block; */
 }
 .table_result_wrapper .table_connected_wrapper:last-child::before {
 
-    height: 94.6%;
+    height: 94%;
 }
 .table_connected_wrapper:before {
+
+}
+.table_connected_wrapper.active-tab:before {
     position: absolute;
     display: block;
     content: "";
@@ -1815,6 +1832,7 @@ span.rank {
     top: 30px;
     background-color: #d4d1d1;
     left: 6px;
+    transition: all ease-in-out 300ms;
 }
 .table_connected_wrapper:after {
     position: absolute;
@@ -1822,7 +1840,7 @@ span.rank {
     content: "";
     width: 22px;
     height: 22px;
-    top: 15px;
+    top: 14px;
     background-color: #f8f8f8;
     border: 5px solid #d4d1d1;
     left: -1px;
@@ -1835,12 +1853,13 @@ span.rank {
 .bottom_nav a.hide_navigation {
     position: relative;
     display: block;
-    color: white;
+    color: #ffffff;
     background: #525d69;
-    line-height: 1em;
+    line-height: 1.1em;
     padding: 13px 20px;
     height: 40px;
     text-decoration: none !important;
+    font-size: 13px;
 }
 .bottom_nav a.hide_navigation:hover {
     opacity: 0.7;
