--- a/css/style.css
+++ b/css/style.css
@@ -1973,6 +1973,8 @@ header .landing_page_header_container h2 {
     margin-bottom: 40px;
     line-height: 1.2em;
     z-index: 1;
+    text-shadow: 3px 1px 2px rgba(0, 0, 0, 0.2);
+    /*color: #f7ff97;*/
 }
 header .landing_page_header_container .cta_wrapper {
     position: relative;
@@ -1980,6 +1982,10 @@ header .landing_page_header_container .cta_wrapper {
 header .landing_page_header_container .btn.btn-big {
     z-index: 1;
     color: #1b5465;
+}
+header .landing_page_header_container .btn.btn-big:hover {
+    color: #fff;
+    background: #213e4c;
 }
 /* header .landing_page_header_container .shadow {
     position: absolute;
@@ -2008,6 +2014,7 @@ header .landing_page_header_container .shadow:after {
     -o-transform: skewX(38deg);
     transform: skewX(38deg);
 } */
+
 .tbl_headingInfo {
     padding-left: 31px;
     margin-bottom: 2px;
@@ -2025,7 +2032,8 @@ header .landing_page_header_container .shadow:after {
     left: -53%;
 }
 .landing_text_content {
-    padding: 50px;
+    padding: 80px;
+    height: 50vh;
 }
 .landing_text_content h2 {
     position: relative;
@@ -2036,7 +2044,7 @@ header .landing_page_header_container .shadow:after {
     font-family: 'Open Sans', sans-serif;
     display: inline-block;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     text-transform: uppercase;
 }
 .landing_text_content h2:before {
@@ -2061,10 +2069,11 @@ header .landing_page_header_container .shadow:after {
     font-size: 24px;
 }
 .landing_text_content p {
-    font-size: 18px;
+    font-size: 16px;
     margin-top: 11px;
     display: block;
     color: #676767;
+    font-weight: lighter;
 }
 .flex_child.flex_xs_grid_2_12.img_text_content {
     width: 53%;
@@ -2076,10 +2085,11 @@ header .landing_page_header_container .shadow:after {
     width: 47%;
 }
 .show_process_wrapper .section_landing_page:first-child {
-    border-top: 1px solid #d6d6d6;
+    /*border-top: 1px solid #d6d6d6;*/
 }
 .section_landing_page {
     background-color: #ffffff;
+    padding-top: 50px;
 }
 .landing_text_content h2,
 .landing_text_content h3,
@@ -2150,8 +2160,7 @@ header .landing_page_header_container .shadow:after {
     border-right: none;
 }
 .disclaimer_section {
-    background-color: #105c6c;
-    border-bottom: 2px solid #0a4652;
+    background-color: #112935;
     padding: 80px 0;
     text-align: center;
     background-image: url(../images/squares-alt.svg);
@@ -2169,8 +2178,12 @@ header .landing_page_header_container .shadow:after {
     color: #105b6b;
     border-color: transparent;
 }
+.disclaimer_section a.btn.btn-big:hover {
+    color: #fff;
+    background: #213e4c;
+}
 .copyright {
-    background-color: #105b6b;
+    background-color: #112935;
     padding: 28px 0 27px 0;
     display: inline-block;
     width: 100%;
