--- a/css/style.css
+++ b/css/style.css
@@ -2336,6 +2336,7 @@ header .landing_page_header_container .shadow:after {
 }
 
 
+
 .step__details {
   padding-bottom: 20px;
   border-bottom: 1px solid #ddd;
@@ -2352,16 +2353,19 @@ header .landing_page_header_container .shadow:after {
     padding-top: 5px;
     font-size: medium; }
   .step__details.next-step {
-    margin-top: 250px !important;
+    position: fixed;
+    bottom: 20px;
     background: #fafafa;
     padding: 30px;
     margin-top: 60px;
     border-radius: 10px;
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12); }
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.12);
+    left: auto;
+    width: 800px; }
     .step__details.next-step h3 {
       color: #777; }
       .step__details.next-step h3 strong {
-        color: #5bc0de; }
+        color: #999; }
     .step__details.next-step p {
       color: 999; }
 
@@ -2402,6 +2406,10 @@ header .landing_page_header_container .shadow:after {
 
 .start_anomalyDetection_wrapper {
   margin-top: 30px; }
+
+
+
+
 
 
 
